// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton component should match snapshot 1`] = `
<div>
  <div
    class="css-1bkbd36-Skeleton"
  />
</div>
`;

exports[`Skeleton component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-1gjv3gb-Skeleton"
  />
</div>
`;
